Unify/Not-Used/BNP-Test/onPremiseInstall/configurations/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orphea-istio-ingressgateway
  namespace: orphea
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orphea-istio
  namespace: orphea
spec:
  hosts:
  - "*"
  gateways:
  - orphea-istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 80    
  - match:
    - uri:
        prefix: /api
    - uri:
        prefix: /swagger-ui
    - uri:
        prefix: /v3
    - uri:
        exact: /swagger-ui.html
    route:
    - destination:
        host: boson
        port:
          number: 8080
  - match:
    - uri:
        prefix: /orphea-shs
    route:
    - destination:
        host: orphea-spark-history-server
        port:
          number: 18080
  - match:
    - uri:
        prefix: /lsp
    route:
    - destination:
        host: parler
        port:
          number: 8999
